@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: gnubiff_options.cc,v $
-// Revision      : $Revision: 1.33 $
-// Revision date : $Date: 2005/12/11 16:45:27 $
+// Revision      : $Revision: 1.34 $
+// Revision date : $Date: 2005/12/18 23:58:03 $
 // Author(s)     : Robert Sowada, Nicolas Rougier
 // Short         : Options for gnubiff
 //
@@ -275,7 +275,7 @@ Gnubiff_Options::add_options_general (void)
 	const static gchar *s7[] = {"none", "mark_as_read", "start", "stop", NULL};
 	add_option (new Option_UInt ("signal_sigusr1", OPTGRP_GENERAL,
 		"Action to be executed if the signal SIGUSR1 is caught by gnubiff. "
-		"Possible actions are ignoring the signal (\"none\"), marking all "
+		"\nPossible actions are ignoring the signal (\"none\"), marking all "
 		"messages as read (\"mark_as_read\"), starting monitoring (\"start\") "
 		"or stopping monitoring (\"stop\").",
 								 SIGNAL_MARK_AS_READ,
@@ -283,7 +283,8 @@ Gnubiff_Options::add_options_general (void)
 	// SIGNAL_SIGUSR2
 	add_option (new Option_UInt ("signal_sigusr2", OPTGRP_GENERAL,
 		"Action to be executed if the signal SIGUSR2 is caught by gnubiff. "
-		"For a description of the actions the option SIGNAL_SIGUSR1.",
+		"\nFor the available actions see the description of option "
+		"SIGNAL_SIGUSR1.",
 								 SIGNAL_NONE,
 								 OPTFLG_ID_INT_STRICT, i7,s7));
 }
